added in related functions from my-app.html

--- a/src/behaviors/sign-in-behavior.html
+++ b/src/behaviors/sign-in-behavior.html
@@ -160,6 +160,25 @@
         };
       },
 
+      getParameterByName: function(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
+      },
+
+      checkForAccountFunctions: function() {
+        var mode = this.getParameterByName("mode");
+        var actionCode = this.getParameterByName("oobCode");
+        var apiKey = this.getParameterByName("apiKey");
+        if(mode || actionCode || apiKey) {
+          this.openVerify();
+        };
+      }
+
     };
 
   })();
