minor content correction

--- a/src/pages/care-plan/su-care.html
+++ b/src/pages/care-plan/su-care.html
@@ -238,7 +238,7 @@
             </p>
             <br />
             <p>
-              Please read this form carfully. I am aware that I have the right to change my mind at any time including after I have signed this form.
+              Please read this form carefully. I am aware that I have the right to change my mind at any time including after I have signed this form.
 
               I agree to the care and support described in this document.
             </p>
